<resources>
    <string name="app_name">Clientes</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="contentDescription">Logo</string>
    <string name="bt_sigin">Login</string>
    <string name="bt_cad">Cadastro</string>
    <string name="password_fail">E-mail inválido</string>
    <string name="email_fail">Senha inválida</string>
    <string name="email_already">E-mail já cadastrado</string>
    <string name="signup_fail">Não foi possível realizar o login</string>
    <string name="content_description_foto_cliente">Foto do Cliente</string>
    <string name="hint_nome">Nome do Cliente</string>
    <string name="hint_email_cliente">E-mail do Cliente</string>
    <string name="hint_idade_cliente">Idade</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="input_error_invalido">erro input</string>
    <string name="esqueceu_senha_tela_login">esqueceu_senha</string>
    <string name="toast_problemas_signin">Problemas no signIn</string>
    <string name="foto_do_produto">Foto Produto</string>
    <string name="hint_sobrenome">Sobrenome</string>
    <string name="hint_cpf">CPF</string>
    <string name="bt_salvar">Salvar</string>
    <string name="hint_codigo_de_barras">Utilize o leitor ou digite</string>
    <string name="bt_ver_pedidos">Pedidos</string>
    <string name="snack_preencher_todos_campos">Todos os campos devem ser preenchidos</string>
    <string name="toast_codigo_barras_ja_cadastrado">Codigo de barras ja cadastrado</string>
    <string name="toast_cliente_salvo">Cliente salvo</string>
    <string name="snack_operacao_falhou">Operação falhou</string>
    <string name="toast_produto_salvo">Produto salvo</string>
    <string name="toast_foto_cliente_upload_fail">Falha no upload</string>
    <string name="title_menu_lercodigodebarras">Codigo de Barras</string>
    <string name="toast_produto_nao_cadastrado">Produto não cadastrado</string>
    <string name="message_processando">Processando...</string>
    <string name="hint_nome_produto">Nome Produto</string>
    <string name="label_codigo_de_barras">Código De Barras</string>
    <string name="label_nome">Nome:</string>
    <string name="label_descricao">Descrição</string>
    <string name="hint_descricao_produto">Produto</string>
    <string name="label_valor">Valor</string>
    <string name="hint_digite_valor">Digite o valor</string>
    <string name="hint_quantidade_digite">Digite a quantidade</string>
    <string name="menu_pesquisar">Pesquisar</string>
    <string name="titulo_janela_galeria_imagens">Selecione uma imagem</string>
    <string name="toast_foto_produto_upload_fail">Upload da foto falhou</string>
</resources>
